pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/lock/deps.ub
lock: {
  version: 1
  toolchain: {
    unobin-version: 'v0.1.0'
  }
  deps: {
    'example.com/lib': { kind: ub version: 'v1.0.0' commit: 'abc123' hash: 'sha256:abc123' }
    'example.com/lib': { kind: ub version: 'v1.1.0' commit: 'def456' hash: 'sha256:def456' }
  }
}
